--- a/RevisedFoodShop.html
+++ b/RevisedFoodShop.html
@@ -16,64 +16,63 @@
                 <tr>
                     <td>Tomato</td>
                     <td>0.30</td>
-                    <td><button onclick="inventory(products)">4</button></td>
+                    <td><button onclick="inventory(products)" id="food">4</button></td>
                 </tr>
                 <tr>
                     <td>Potato</td>
                     <td>0.80</td>
-                    <td><button onclick="inventory(products)">6</button></td>
+                    <td><button onclick="inventory(products)" id="food">6</button></td>
                 </tr>
                 <tr>
                     <td>Onion</button></td>
                     <td>0.40</td>
-                    <td><button onclick="inventory(products)">8</button></td>
+                    <td><button onclick="inventory(products)" id="food">8</button></td>
                 </tr>
                 <tr>
                     <td>Carrot</td>
                     <td>0.50</td>
-                    <td><button onclick="inventory(products)">7</button></td>
+                    <td><button onclick="inventory(products)" id="food">7</button></td>
                 </tr>
                 <tr>
                     <td>Celery</td>
                     <td>1.00</td>
-                    <td><button onclick="inventory(products)">9</button></td>
+                    <td><button onclick="inventory(products)" id="food">9</button></td>
                 </tr>
                 <tr>
                     <td>Lettuce</td>
                     <td>1.20</td>
-                    <td><button onclick="inventory(products)">4</button></td>
+                    <td><button onclick="inventory(products)" id="food">4</button></td>
                 </tr>
                 <tr>
                     <td>Spinach</td>
                     <td>1.10</td>
-                    <td><button onclick="inventory(products)">8</button></td>
+                    <td><button onclick="inventory(products)" id="food">8</button></td>
                 </tr>
                 <tr>
                     <td>Cabbage</td>
                     <td>1.60</td>
-                    <td><button onclick="inventory(products)">8</button></td>
+                    <td><button onclick="inventory(products)" id="food">8</button></td>
                 </tr>
                 <tr>
                     <td>Beetroot</td>
                     <td>0.70</td>
-                    <td><button onclick="inventory(products)">5</button></td>
+                    <td><button onclick="inventory(products)" id="food">5</button></td>
                 </tr>
                 <tr>
                     <td>Turnip</td>
                     <td>0.60</td>
-                    <td><button onclick="inventory(products)">8</button></td>
+                    <td><button onclick="inventory(products)" id="food">8</button></td>
                 </tr>
                 <tr>
                     <td>Parsnip</td>
                     <td>0.90</td>
-                    <td><button onclick="inventory(products)">7</button></td>
+                    <td><button onclick="inventory(products)" id="food">7</button></td>
                 </tr>
                 <tr>
                     <td>Mushroom</td>
                     <td>1.40</td>
-                    <td><button onclick="inventory(products)">6</button></td>
+                    <td><button onclick="inventory(products)" id="food">6</button></td>
                 </tr>
-            </table>
-        </p>      
+            </table>    
     </body>
 </html>
